--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_3020308_39pzcui25do.css">
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
